# crypto-versus.rs

./: .gitignore  Cargo.toml  genapi
src/: api_endpoints.rs  database.rs  hash.rs  main.rs
src/api_endpoints/: account.rs  login.rs  logout.rs  refresh.rs  signup.rs  stats.rs
src/api_endpoints/account/: edit.rs  stats.rs
src/api_endpoints/user/: stats.rs
src/public/: login.ejs  signup.ejs  style.css
src/public/scripts/: login.js  sha256.js  signup.js
