[package]
name = "crypto-versus"
version = "0.1.0"
edition = "2021"

[[bin]]
name="crypto-versus"
path="src/main.rs"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
dotenvy = "0.15.7"
sha2 = "0.10"
base64 = "0.21.0"

[dependencies.mongodb]
version = "2.5.0"
default-features = false
features = ["async-std-runtime"]

[dependencies.uuid]
version = "1.3.2"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
